--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.carousel-caption {
+  margin-bottom: 80px;
+}
+
+.carousel-caption h5 {
+  font-size: 2.25rem;
+}
